--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,16 @@ jobs:
     env:
       FORCE_COLOR: 1
     steps:
+    - uses: earthly/actions-setup@v1
+      with:
+        version: v0.7.8
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v2
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - uses: earthly/actions-setup@v1
-      with:
-        version: v0.7.8
-    - uses: actions/checkout@v2
     - name: Run build
       run: earthly --ci --push --remote-cache=ghcr.io/fristi/project-mycelium:cache +build
