--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Run build
       run: earthly --ci --push --remote-cache=ghcr.io/fristi/project-mycelium:cache ./backend/+docker
     - uses: superfly/flyctl-actions/setup-flyctl@master
+    - name: Sleep for 30 seconds ... ghcr is slow ...
+      run: sleep 30s
+      shell: bash
     - run: flyctl deploy --image ghcr.io/fristi/project-mycelium-backend:$(git rev-parse --short HEAD)
       env:
         FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
