--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -21,7 +21,6 @@ services:
     image: minio/minio
     volumes:
       - ./data:/data
-    command: server /data
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: miniominio
@@ -29,6 +28,8 @@ services:
       MINIO_SECRET_KEY: miniominio
     ports:
       - 9000:9000
+      - 9001:9001
+    command: server --console-address ":9001" /data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
