--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Docker login # to avoid dockerhub rate-limiting
       run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Run build
-      run: earthly --ci --push --remote-cache=ghcr.io/fristi/project-mycelium:cache ./+build
+      run: earthly --ci --remote-cache=ghcr.io/fristi/project-mycelium:cache ./+build
