--- a/fly.toml
+++ b/fly.toml
@@ -13,3 +13,10 @@ primary_region = "ams"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[env]
+  PG_HOST = "little-flower-9130.internal"
+  PG_USER = "postgres"
+  PG_DB = "postgres"
+  S3_HOST = ""
+  S3_ACCESS_KEY = ""
