--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,4 @@ primary_region = "ams"
   PG_DB = "postgres"
   S3_HOST = ""
   S3_ACCESS_KEY = ""
+  SENTRY_BACKEND_DSN = "https://c80d0d99dc464a3b899c5d06b0a06cf3@o4505515472977920.ingest.sentry.io/4505515475009536"
