--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,15 +19,20 @@
     "@capacitor/app": "^5.0.6",
     "@capacitor/browser": "^5.0.6",
     "@capacitor/core": "^5.0.4",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@tanstack/react-query": "^4.32.0",
     "axios": "^0.24.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "moment": "^2.29.4",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.11.2",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.4",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.16",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-query": "^1.2.9",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
