Fix layout issues and add prettier

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-*/target
-*/project
+**/target
+**/project
 /Cargo.lock
 .idea
 .DS_Store
-*/.embuild
+**/.embuild
 *.iml
-*/artifacts
-*/node_modules/
+**/artifacts
+**/node_modules/
 *.map
-*/dist/
-*/build/
-*/.bsp
-*/data/*
+**/dist/
+**/build/
+**/.bsp
+**/data/*
