--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "build:android": "tsc && vite build && npx cap sync && npx cap open android",
     "run:android": "tsc && vite build && npx cap sync && npx cap run android",
     "preprov": "earthly ../backend/+dev && docker compose -f ../docker-compose.yml -f ../docker-compose.dev.yml up",
-    "stage": "earthly ../backend/+stage && docker compose -f ../docker-compose.yml -f ../docker-compose.dev.yml up"
+    "stage": "earthly ../backend/+stage && docker compose -f ../docker-compose.yml -f ../docker-compose.dev.yml up",
+    "prettier": "npx prettier . --write",
+    "prettier-check": "npx prettier . --check"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.0",
@@ -41,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
+    "prettier": "3.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
