--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,12 @@
     "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^0.24.0",
+    "formik": "^2.4.2",
     "moment": "^2.29.4",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.11.2",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.4",
