--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,23 @@
 version: "2"
 services:
-  s3:
-    image: minio/minio
-    volumes:
-      - ./data:/data
-    environment:
-      MINIO_ROOT_USER: minio
-      MINIO_ROOT_PASSWORD: miniominio
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: miniominio
-    ports:
-      - 9000:9000
-      - 9001:9001
-    command: server --console-address ":9001" /data
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+  # s3:
+  #   image: minio/minio
+  #   volumes:
+  #     - ./data:/data
+  #   environment:
+  #     MINIO_ROOT_USER: minio
+  #     MINIO_ROOT_PASSWORD: miniominio
+  #     MINIO_ACCESS_KEY: minio
+  #     MINIO_SECRET_KEY: miniominio
+  #   ports:
+  #     - 9000:9000
+  #     - 9001:9001
+  #   command: server --console-address ":9001" /data
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+  #     interval: 30s
+  #     timeout: 20s
+  #     retries: 3
 
   db:
     image: timescale/timescaledb:2.11.1-pg15
