--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Docker login # to avoid dockerhub rate-limiting
       run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Run build
-      run: earthly --ci --push --remote-cache=ghcr.io/fristi/project-mycelium:cache ./backend/+docker
+      run: earthly --ci --push --remote-cache=ghcr.io/fristi/project-mycelium:cache ./backend/+docker --MYCELIUM_HOST=https://mycelium.fly.dev
     - uses: superfly/flyctl-actions/setup-flyctl@master
     - run: flyctl deploy --image ghcr.io/fristi/project-mycelium-backend:$(git rev-parse HEAD)
       env:
