--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.0",
+    "@capacitor-community/bluetooth-le": "^3.0.0",
     "@capacitor/android": "^5.0.4",
     "@capacitor/app": "^5.0.6",
     "@capacitor/browser": "^5.0.6",
@@ -30,7 +31,8 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.11.2",
     "recharts": "^2.7.2",
-    "yup": "^1.2.0"
+    "zod": "^3.21.4",
+    "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.4",
