--- a/firmware/.cargo/config.toml
+++ b/firmware/.cargo/config.toml
@@ -8,10 +8,11 @@ rustflags = ["-C", "default-linker-libraries"]
 
 [unstable]
 build-std = ["std", "panic_abort"]
+build-std-features = ["panic_immediate_abort"]
 
 [env]
-# Note: these variables are not used when using pio builder (`cargo build --features pio`)
-ESP_IDF_VERSION = "v4.4.4"
+# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v4.4.4)
+ESP_IDF_VERSION = { value = "tag:v4.4.4" }
 
 
 [net]
