--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -31,6 +31,8 @@ heapless = "0.7.16"
 num_enum = "0.6.1"
 serde = "1.0.164"
 serde_json = "1.0.104"
+thingbuf = { version = "0.1.4", features = ["static"] }
+retry = "2.0.0"
 
 [build-dependencies]
 embuild = "0.31.2"
