--- a/firmware/.cargo/config.toml
+++ b/firmware/.cargo/config.toml
@@ -7,8 +7,8 @@ linker = "ldproxy"
 rustflags = ["-C", "default-linker-libraries"]
 
 [unstable]
-build-std = ["std", "panic_abort"]
-build-std-features = ["panic_immediate_abort"]
+build-std = ["std", "alloc", "panic_abort"]
+#build-std-features = ["panic_immediate_abort"]
 
 [env]
 # Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v4.4.4)
