--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -34,6 +34,8 @@ serde_json = "1.0.104"
 thingbuf = { version = "0.1.4", features = ["static"] }
 retry = "2.0.0"
 uuid = { version = "1.4.1", features = ["serde"] }
+chrono = { version = "0.4.26", features = ["std"], default-features = false }
+rand = "0.8.5"
 
 [build-dependencies]
 embuild = "0.31.2"
