--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Docker login # to avoid dockerhub rate-limiting
       run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-    - name: Run build
+    - name: Run backend build
       run: earthly --ci --push --remote-cache=ghcr.io/fristi/project-mycelium:cache ./backend/+docker
+    - name: Run indexer build
+      run: earthly --ci --push --remote-cache=ghcr.io/fristi/project-mycelium:cache ./perenual-indexer/+docker
     - uses: superfly/flyctl-actions/setup-flyctl@master
     - run: flyctl deploy --image ghcr.io/fristi/project-mycelium-backend:$(git rev-parse HEAD)
       env:
