--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,9 +3,10 @@ services:
   api:
     image: local/project-mycelium-backend:dev
     environment:
-      PG_HOST: db
+      PG_HOST: ep-quiet-cloud-60075535.eu-central-1.aws.neon.tech
+      PG_USER: av3ng3r
+      PG_DB: neondb
+      PG_PASS: ${MYCELIUM_PG_PASS}
       S3_HOST: http://s3:9000
-    depends_on:
-      - db
     ports:
       - 8080:8080
