--- a/.github/workflows/deps-review.yml
+++ b/.github/workflows/deps-review.yml
@@ -8,7 +8,8 @@ jobs:
   dependency-review:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout Repository'
-        uses: actions/checkout@v3
-      - name: 'Dependency Review'
-        uses: actions/dependency-review-action@v3
+      - uses: actions/checkout@v3
+      - uses: scalacenter/sbt-dependency-submission@v2
+        with:
+          working-directory: ./backend
+      - uses: actions/dependency-review-action@v3
