--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -1,15 +1,14 @@
 on:
-    workflow_dispatch:
-    schedule:
-        - cron: '0 0 * * 0'
-  
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 0'
 name: Launch Scala Steward
 jobs:
     scala-steward:
-        runs-on: ubuntu-22.04
-        name: Scala Steward 
-        steps:
-        - name: Backend Scala Steward
+      runs-on: ubuntu-22.04
+      name: Launch Scala Steward
+      steps:
+        - name: Launch Scala Steward
           uses: scala-steward-org/scala-steward-action@v2
           with:
             github-app-id: ${{ secrets.APP_ID }}
